<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.viskar</groupId>
    <artifactId>lib-directinput8-parent</artifactId>
    <version>main-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <javapoet.version>1.13.0</javapoet.version>
    </properties>

    <modules>
        <module>lib-common-codegen</module>
        <module>lib-directinput8-jextract</module>
        <module>lib-directinput8</module>
        <module>lib-directinput8-example</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- modules -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>lib-directinput8</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>lib-directinput8-jextract</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>lib-directinput8-example</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>lib-native-codegen</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <compilerVersion>17</compilerVersion>
                        <!--<release>17</release>-->
                        <compilerArgs>
                            <!-- Debug symbols are useful for the code generator to access -->
                            <arg>-g</arg>
                            <arg>-parameters</arg>
                            <!-- Add the jdk.foreign module -->
                            <arg>--add-modules</arg>
                            <arg>jdk.incubator.foreign</arg>
                            <!-- fun stuff -->
                            <arg>--add-opens</arg>
                            <arg>java.desktop/sun.awt.windows=ALL-UNNAMED</arg>
                            <arg>--add-exports</arg>
                            <arg>java.desktop/sun.awt.windows=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>